Fixed line break on button and made it work better on tablet sizes

--- a/net-neutrality.css
+++ b/net-neutrality.css
@@ -115,7 +115,7 @@
 	}
 
 	#net-neutrality-overlay div {
-		width: 100%;
+		max-width: 100%;
 		padding: 30px;
 		top: 60px;
 		left: auto;
